--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.28.0",
-    "uuid": "^9.0.0"
+    "sequelize": "^6.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
